--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       <input type="submit" value="Create New Task">
     </form>
 
+    <br>
+
+    <select name="sort-tasks" id="sort-tasks">
+      <option value="h-l">High to Low</option>
+      <option value="">Low to High</option>
+    </select>
+
     <div id="list">
       <h2>My Todos:</h2>
       <ul id="tasks">
